--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -16,18 +16,6 @@
       <button class="tablinks" onclick="openSetting(this, 'psv')">PC-PSV</button>
       <button class="tablinks" onclick = "openSetting(this,'test')">TEST</options>
     </div>
-
-    <!--
-    <div id = "select-settings" class = "select-container lockable d-flex justify-content-center">
-      <select class = "input-reading ml-auto mr-auto pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Settings" placeholder = "Select Settings to Edit">
-        <option value = "select">Select Setting</option>
-        <option value = "personal">Personal Details</option>
-          <option value="pcac">PC-A/C</option>
-          <option value="prvc">PC-A/C-PRVC</option>
-          <option value="psv">PC-PSV</option>
-          <option value = "test">TEST</options>
-      </select>
-    </div>-->
   </div>
   <div id="personal" class="tabcontent align-items-center justify-content-center">
     <form method="post" id = "personal-settings-form">
@@ -313,40 +301,7 @@
 {% endblock %}
 
 {% block body_scripts %}
-
-
-<script src="{{ url_for('static', filename='js/Chart-display.js') }}"></script>
-<script src="{{ url_for('static', filename='js/HevUpdater.js') }}"></script>
-
 <script type=text/javascript>
-// get all of the elements and decide which are to be unlocked
-function unlock_mode_elements(mode){
-  //disable all of our ventilator mode options first
-  var ventOptions = document.querySelectorAll('.prvc-edit,.psv-edit,.pcac-edit');
-  for (let i = 0 ; i < ventOptions.length; i++) { 
-    ventOptions[i].disabled=true;
-    ventOptions[i].classList.remove("unlockOnly");
-  }
-  // now have a go at enabling
-  var unlock_elements = document.getElementsByClassName(mode+"-edit");
-  for (let i = 0 ; i < unlock_elements.length; i++){ 
-    unlock_elements[i].disabled = false;
-    ventOptions[i].classList.add("unlockOnly");
-  }
-
-}
-/*
-var object = document.getElementById("vent_mode");
-object.addEventListener("change", function(){
-  var object = document.getElementById("vent_mode");
-  var opt = object.options[object.selectedIndex];
-  console.log("try to open up: ",opt.value);
-  openSettingContent(opt.value);
-  console.log("setting value to select");
-  object.value="select";
-  //object.selectedIndex="2";
-});
-*/
 
 function edit_ie_ratio(element){
   if (unlocked){
@@ -371,16 +326,6 @@ function edit_inhale_time(element){
   }
 }
 
-
-function sendCmd(var_name, var_value) {
-  var buffer = {name : var_name, value : var_value};
-  $.ajax({
-        type: "POST",
-        url:"/data_handler",
-        data: JSON.stringify(buffer)   // converts js value to JSON string
-        })    
-};
-
 function updateSettings(event, name){
   var mode = name;
   var message = "You are about to update the following settings for "+name+" mode";
@@ -396,13 +341,15 @@ function updateSettings(event, name){
     event.preventDefault();
     return;
   }
-
+  //ask for confirmation
   $.confirm({
   	title: 'Confirmation',
 		content: message,
 	  buttons: {
 	    confirm: function () {
+        //before confirming we tell the page to await an update
         wait_update(mode);
+        // now send command to change
         $.ajax({
           url: "/target_handler",
           type: 'POST',
@@ -427,6 +374,7 @@ function updateSettings(event, name){
 }
 
 function updatePersonal(event){
+  //update personal details
   var message = "You are about to update the following personal details";
   var jsonForm = {};
   $("input", $(event.target)).not(':input[type=submit]').each(function(index){
@@ -446,7 +394,7 @@ function updatePersonal(event){
     event.preventDefault();
     return;
   }
-
+  // ask for confirmation and then send
   $.confirm({
   	title: 'Confirmation',
 		content: message,
@@ -475,6 +423,7 @@ function updatePersonal(event){
 
 }
 
+// set the correct functions to call on submit of each form
 $('#personal-settings-form').submit(event, function(){
   updatePersonal(event);
 });
@@ -491,6 +440,7 @@ $('#test-settings-form').submit(event, function(){
   updateSettings(event,"TEST");
 });
 
+// this will open which setting we want
 function openSettingContent(cityName) {
   // Declare all variables
   var i, tabcontent;
@@ -509,65 +459,12 @@ function openSettingContent(cityName) {
     tablinks[i].className = tablinks[i].className.replace(" active", "");
   }
 }
-function openSetting(el, cityName) {
-  // Declare all variables
-  var i, tabcontent, tablinks;
 
-  // Get all elements with class="tabcontent" and hide them
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-
-  // Get all elements with class="tablinks" and remove the class "active"
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-
-  // Show the current tab, and add an "active" class to the button that opened the tab
-  document.getElementById(cityName).style.display = "flex";
-  el.className += " active";
-}
-
-  class input_controller{
-	constructor(name, element) {
-    this.name = name;
-	this.element = element;
-  }
-  getName(){ return this.name;}
-  getValue() {
-    return this.element.value;
-  }
-  setValue(val){
-    //e.g.
-    window.createNotification({
-			closeOnClick: 1,
-			displayCloseButton: 0,
-			positionClass: "nfc-bottom-right",
-			showDuration: false,
-			theme: "info"
-		})({
-			title: "Updated settings",
-			message: "Setting updated from " + this.element.value + " to " + val + " for " + this.name
-	  });
-	  this.element.value = val;
-    sendCmd(this.name, val);
-  }
-  getMin(){
-	  if (this.element.min) return this.element.min;
-	  else return null;
-  }
-  getMax(){
-	  if (this.element.max) return this.element.max;
-	  else return null;
-  }
-}
-
-//var settings = ["respiratory_rate", "peep", "ie_ratio", "inhale_time", "inhale_trigger_threshold", "exhale_trigger_threshold","fio2_percent","volume", "inspiratory_pressure"];
-
+// these are the settings we want to update
 var settings = ["mode", "inspiratory_pressure", "ie_ratio", "volume", "respiratory_rate", "peep", "fiO2_percent", "inhale_time", "inhale_trigger_threshold", "exhale_trigger_threshold", "buffer_upper_pressure", "buffer_lower_pressure", "inhale_rise_time"]
 
+
+// the short names used in the div ids
 var short_names = {
   PC_AC : "pcac",
   PC_AC_PRVC : "prvc",
@@ -577,6 +474,8 @@ var short_names = {
   PERSONAL : "personal"
 }
 
+
+//store our initial targets so we can go back if user cancels
 var initial_targets = {
   PC_AC : {},
   PC_AC_PRVC : {},
@@ -585,7 +484,6 @@ var initial_targets = {
   TEST : {},
   PERSONAL : {}
 }
-// make sure we have initial null values in case we got no initial ones
 for (let j = 0 ; j < settings.length; j++){
   initial_targets['PC_AC'][settings[j]] = "";
   initial_targets['PC_AC_PRVC'][settings[j]] = "";
@@ -596,7 +494,7 @@ for (let j = 0 ; j < settings.length; j++){
 }
 
 
-
+// fill when we open the page
 $(document).ready(function(){
   var tablinks = document.getElementsByClassName("tablinks");
   if (tablinks.length > 0){
@@ -664,6 +562,7 @@ $(document).ready(function(){
     },
 	  cache: false
   });
+  //fill our personals as well
   var personals = ["name", "age", "sex", "height", "weight"];
   $.ajax({
 	  url: '/last-personal',
@@ -673,7 +572,6 @@ $(document).ready(function(){
       console.log("Got no new personal details");
 	    } else
 	    {
-        console.log(data);
         for (let j = 0 ; j < personals.length; j++){
               var element = document.getElementById("personal_"+personals[j]);
               console.log("personal_setting_"+personals[j],element);
@@ -687,12 +585,12 @@ $(document).ready(function(){
 	});
 });
 
-
+//function to wait for the update
 function wait_update(mode){
-  console.log("waiting update");
   var mode = mode;
   var updateInterval;
   var lastrow = 0;
+  //first get the most recent entry so we can recognise new ones
   $.ajax({
 	  url: '/last-targets',
 	  success: function(data) {
@@ -710,10 +608,11 @@ function wait_update(mode){
     },
 	  cache: false
   });
-  console.log("got row number ",lastrow);
+  // now we define the function used to update
   function updateTargets(mode){
     var short_name = short_names[mode];
     var got_update = false;
+    // call for last targets and see if they're new
     $.ajax({
   	  url: '/last-targets',
   	  success: function(data) {
@@ -732,6 +631,7 @@ function wait_update(mode){
                 element.style.color='black';
               }
             }
+            // if we're here we've managed to update
             updated = true;
           }
         }
@@ -749,49 +649,20 @@ function wait_update(mode){
 $( ".form-control" ).change(function() {
   $(this).css('color' , "red");
 });
+// we shohuld get a number pad when we click on things
 $( ".form-control").click(function(event){
   show_easy_numpad($(event.target)[0],null);
 })
 // reset when we leave the page, back to initial value and black
 // this does nothing if we have no initial values;
 function reset_settings(mode){
-    console.log("Resetting settings for ",mode);
-    console.log(initial_targets[mode]);
-    var short_name = short_names[mode];
-    console.log(short_name);
-    for (let j = 0 ; j < settings.length; j++){
-      console.log(short_name + "_setting_"+settings[j]);
-      var element = document.getElementById(short_name + "_setting_"+settings[j]);
-      if (settings[j] in initial_targets[mode] && element){
-        console.log('updating',settings[j]);
-        element.value = initial_targets[mode][settings[j]];
-        element.style.color="black";
-      }
-    
+  var short_name = short_names[mode];
+  for (let j = 0 ; j < settings.length; j++){
+    var element = document.getElementById(short_name + "_setting_"+settings[j]);
+    if (settings[j] in initial_targets[mode] && element){
+      element.value = initial_targets[mode][settings[j]];
+      element.style.color="black";
     }
-  }
-
-class simple_controller{
-	constructor(element) {
-		this.element = element;
-	}
-
-  	getName(){ return this.name;}
-  	getValue() {
-	    return this.element.value;
-  	}
-
-  	setValue(val){
-			this.element.style.color="red";
-      this.element.value=val;
-    }
-  getMin(){
-	  if (this.element.min) return this.element.min;
-	  else return null;
-  }
-  getMax(){
-	  if (this.element.max) return this.element.max;
-	  else return null;
   }
 }
 
