mode setting from every page

--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -5609,6 +5609,10 @@ l  margin-top: -3rem !important;
 .text-white {
   color: #fff !important;
 }
+.text-red {
+  color:red;
+}
+
 
 .text-primary {
   color: #007bff !important;
