--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -74,28 +74,37 @@
 						</div>
             -->  
 				    <div class="card-reading">
-				    	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-							<a class="small text-white col-center" href="#">RR</small></a>
-					    </div>
-						<div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="respiratory_rate"></span></div> 
-				    </div>
-
-				    <div class="card-reading">
-				    	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+				    	<div class="card-header d-flex align-items-center justify-content-between ">
 							<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
 					    </div>
 					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "peep"></span></div>
 					</div>
-
 				    <div class="card-reading">
-		            	<div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
+				    	<div class="card-header d-flex align-items-center justify-content-between ">
+						<a class="small text-white col-center" href="#">&lt;P<sub>plateau</sub>&gt;<small>[cmH20]</small></a>
+					    </div>
+					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "plateau_pressure"></span></div>
+					</div>
+				    <div class="card-reading">
+				    	<div class="card-header d-flex align-items-center justify-content-between  ">
+							<a class="small text-white col-center" href="#">RR</small></a>
+					    </div>
+						<div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="respiratory_rate"></span></div> 
+				    </div>
+				    <div class="card-reading">
+				    	<div class="card-header d-flex align-items-center justify-content-between ">
+						<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
+					    </div>
+					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "fiO2_percent"></span></div>
+					</div>
+				    <div class="card-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-white col-center" href="#">VTE <small>[mL]</small></a>
 			            </div>
 			            <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_tidal_volume"></span></div>
 				    </div>
-	    
 					<div class="card-reading">
-		            	<div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
+		            	<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-white col-center" href="#">MVE <small>[L/min]</small></a>
 			            </div>
 		            	<div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_minute_volume"></span></div>
@@ -112,9 +121,15 @@
 				<div class = "row no-gutters">
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-dark col-center" href="#">Inhale Time <small>[s]</small></a>
+							<a class="small text-dark col-center" href="#">PEEP <small>[cmH2O]</small></a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inhale_time" value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_peep" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
+					</div>
+					<div class="card-setting">
+						<div class="card-header d-flex align-items-center justify-content-between">
+							<a class="small text-dark col-center" href="#">P<sub>insp</sub> <small>[cmH20]</small></a>
+						</div>
+						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inspiratory_pressure" value=0.0 onclick="show_easy_numpad(this,new input_controller('INSPIRATORY_PRESSURE',this))"></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
@@ -124,28 +139,24 @@
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-dark col-center" href="#">PEEP <small>[cmH2O]</small></a>
-						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_peep" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
-					</div>
-					<div class="card-setting">
-						<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-dark col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
-						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inspiratory_pressure" value=0.0 onclick="show_easy_numpad(this,new input_controller('INSPIRATORY_PRESSURE',this))"></div> 
-					</div>
-					<div class="card-setting">
-						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
 						</div>
 						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_fiO2_percent" value=0.0 onclick="show_easy_numpad(this,new input_controller('FIO2',this))"></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
+							<a class="small text-dark col-center" href="#">Inhale Time <small>[s]</small></a>
+						</div>
+						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inhale_time" value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
+					</div>
+					<!--  hidden for now KH
+					<div class="card-setting">
+						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">Inhale Rise Time <small>[s]</small></a>
 						</div>
 						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_pid_gain" value=0.0 onclick="show_easy_numpad(this,new input_controller('PID_GAIN',this))"></div> 
 					</div>
+					-->
 
 
 				</div>
